2013-07-12  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Clone.wrl:
	* X3DScene.rootNodes.wrl:
	* X3DScene.rootNodes.2.wrl: 

2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* Add&RemoveChildren.wrl: 

2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* Add&RemoveChildren.wrl: 

2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* TransformHandle.wrl: 

2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* TransformHandle.wrl: 

2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Grid.wrl:
	* Grid.wrl:
	* index.wrl:
	* TransformHandle.wrl: 

2013-07-10  Holger Seelig  <holger.seelig@yahoo.de>

	* ChangeLog: 

2013-07-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Viewpoint.bind.wrl: 

2013-07-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Beethoven.wrl:
	* TransformHandle.wrl:
	* ProximitySensor.wrl: 

2013-07-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj: 

2013-07-08  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* index.wrl:
	* map.htm:
	* moon.jpg:
	* mars.jpg:
	* intro.htm:
	* cosmo.jpg:
	* map.htm:
	* index.htm:
	* earth.jpg:
	* pluto.jpg:
	* venus.jpg:
	* saturn.jpg:
	* uranus.jpg:
	* mars.jpg:
	* moon.jpg:
	* venus.jpg:
	* pluto.jpg:
	* jupiter.jpg:
	* mercury.jpg:
	* neptune.jpg:
	* astrnmy.jpg:
	* astrnmy.wrl:
	* intro.htm:
	* earth.jpg:
	* cosmo.jpg:
	* index.htm:
	* saturn.jpg:
	* uranus.jpg:
	* astrnmy.wrl:
	* neptune.jpg:
	* mercury.jpg:
	* jupiter.jpg:
	* astrnmy.jpg:
	* dir.htm:
	* cred.htm:
	* ping.wav:
	* tech.htm:
	* galaxy.jpg:
	* sci23.wav:
	* nebula1.jpg:
	* nebula2.jpg:
	* comet.wav:
	* ping.wav:
	* sun.jpg:
	* dir.htm:
	* ping.wav:
	* dirtop.htm:
	* atmo30.wav:
	* galaxy.jpg:
	* dirbtn.jpg:
	* tech.htm:
	* beeps2.wav:
	* andrmeda.jpg:
	* galwhirl.jpg:
	* man226.wav:
	* cred.htm:
	* atmo10.wav:
	* planet3.wav:
	* planet1.wav:
	* index.htm:
	* planet6.wav:
	* comet.wav:
	* techbtn.htm:
	* ping.wav:
	* mars.jpg:
	* credbtn.jpg: