@@ -1,3 +1,7 @@
+2013-07-13  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* ViewpointGroup.wrl: 
+
 2013-07-12  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Library.mdproj:
